Correction Text contrast

--- a/style.css
+++ b/style.css
@@ -831,7 +831,8 @@ h4 {
 }
 
 .text-dark-footer {
-    font-size: 15px;
+    font-size: 16px;
+    font-weight: bold;
     color: black;
 }
 
